[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopro-api"
version = "0.0.7"
description = "Unofficial Python client for the GoPro cloud API (api.gopro.com): sync and async clients, Pydantic models, and a CLI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "himewel", email = "welberthime@gmail.com" }]
keywords = ["gopro", "quik", "cloud", "api", "async", "aiohttp", "media", "gopro-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp~=3.11.14",
    "pydantic~=2.10.6",
    "pydantic-settings~=2.14",
    "requests~=2.32.3",
]

[project.urls]
Homepage = "https://github.com/himewel/gopro-api"
"Bug Tracker" = "https://github.com/himewel/gopro-api/issues"
Source = "https://github.com/himewel/gopro-api"

[project.scripts]
gopro-api = "gopro_api.cli:main"

[project.optional-dependencies]
dev = [
    "black~=24.10.0",
    "pylint~=3.3.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mike>=2.1",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = "\\.pyi?$"
extend-exclude = """
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.ruff_cache
  | \\.tox
  | \\.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
"""

[tool.pylint.main]
py-version = "3.10"
jobs = 0
init-hook = "import sys; sys.path.insert(0, '.')"
ignore-paths = [
    ".venv/.*",
    "venv/.*",
    "build/.*",
    "dist/.*",
]

[tool.pylint.format]
max-line-length = 88
indent-string = "    "

[tool.pylint."messages control"]
enable = [
    "useless-suppression",
]
disable = [
    "not-async-context-manager",
]

[tool.pylint.design]
max-args = 7
max-attributes = 11
